# carbon_dioxide_emissions

./: .gitignore  Dockerfile  Dockerfile.streamlit  app.py  pyproject.toml
.github/workflows/: ci.yml
data/processed/: feature_engineered_test.csv  test_cleaned.csv  test_feature_engineered.csv  train_cleaned.csv
data/raw/: carbon_dioxide_emissions.csv  test.csv  train.csv
models/: xgb_best_model.pkl  xgb_model.pkl
notebooks/: 00_data_split.ipynb  01_EDA_cleaning.ipynb  02_feature_engineering_encoding.ipynb  03_baseline.ipynb  04_linear_regression_regularization.ipynb  05_XGBoost.ipynb  06_hyperparameter_tuning_MLFlow.ipynb  07_B2_push_datasets_BLZE.ipynb
src/: inference.py
src/api/: main.py
src/batch/: run_monthly.py
src/feature_pipeline/: feature_engineering.py  load.py  preprocess.py
src/inference_pipeline/: inference.py
src/training_pipeline/: test.py  train.py  tune.py
tests/: test_features.py  test_inference.py  test_training.py
