[project]
name = "carbon_emissions"
version = "0.1.0"
description = "Add your description here."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.40.33",
    "category-encoders>=2.8.1",
    "evidently>=0.7.12",
    "fastapi>=0.135.2",
    "great-expectations==1.15.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "mlflow>=3.10.1",
    "nbformat>=5.10.4",
    "numpy==2.4.3",
    "optuna>=4.5.0",
    "pandas==2.3.3",
    "polars>=1.32.3",
    "pytest>=8.4.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.48.1",
    "xgboost==3.2.0",
]